Fix footer creeping into body problem accross app, fix overlap on small vh issue in search, finish styling game display, fix issue with hero and search component on very small phone sizes.

--- a/src/scss/2-basics/_universal.scss
+++ b/src/scss/2-basics/_universal.scss
@@ -11,3 +11,12 @@ article,
 div {
   font-family: $font-main;
 }
+
+.App {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  min-width: 100vw;
+}
