--- a/src/scss/3-containers/_searchResults.scss
+++ b/src/scss/3-containers/_searchResults.scss
@@ -3,5 +3,4 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  width: 100%;
 }
