--- a/src/scss/4-pages/_gameLibrary.scss
+++ b/src/scss/4-pages/_gameLibrary.scss
@@ -1,5 +1,5 @@
-.gameLibrary {
-  min-width: 100vw;
+#gameLibrary {
+  max-width: 100vw;
 }
 #searchResAndForm {
   display: flex;
