--- a/src/scss/4-pages/_gamedisplay.scss
+++ b/src/scss/4-pages/_gamedisplay.scss
@@ -1,3 +1,7 @@
+.game-display-page {
+  flex: 1 0 auto;
+}
+
 .mecCatBox,
 .game-info-row,
 .game-description,
@@ -38,4 +42,10 @@
   max-width: 90%;
   max-height: 90%;
   margin: 20px;
+}
+
+@media (max-width: $bp-mobile) {
+  .game-name {
+    font-size: 1.5em;
+  }
 }
